<resources>
    <string name="app_name">Finddes</string>

    <string name="input">Correo</string>
    <string name="contra">Contaseña</string>
    <string name="register">Registrarse</string>
    <string name="login">Acceder</string>
    <string name="provider">Proveedor</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="suggestions">Sugerencias</string>
    <string name="error">¡Error!</string>
    <string name="sing_up_error">Se ha producido un error al registrar el usuario</string>
    <string name="login_error">Se ha producido un error al iniciar sesión</string>
    <string name="fill_error">Complete todos los campos</string>
    <string name="error_name">Este nombre ya existe, pruebe con otro</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="logout_message">¿Estas seguro que quieres cerrar sesión?</string>
    <string name="close">Cerrar</string>
    <string name="add_post">Añadir experiencia</string>
    <string name="location">Zona de experiencia</string>
    <string name="categories">Selecciona una categoria</string>
    <string name="add_post_error">¡Texto necesario para añadir post!</string>
    <string name="new_category">Añade una nueva categoria</string>
    <string name="thanks_new_post">Gracias por el post!</string>
    <string name="error_new_post">Se ha producido un error al añadir el post, intentelo de nuevo</string>
    <string name="see_all">see all</string>
    <string name="favorite">favorite</string>
    <string name="delete">Eliminar Post</string>
    <string name="delete_message_post">¿Estas seguro que quieres eliminar este post?</string>
    <string name="apply_filters">Aplicar filtros</string>
    <string name="delete_filters">Eliminar filtros</string>
    <string name="filter">filter</string>
    <string name="delete_post">Post Eliminado</string>
    <string name="delete_post_error">Se ha producido un error al eliminar el post, intentelo de nuevo</string>
    <string name="filter_location">Selecciona una localidad</string>
    <string name="filter_area">Selecciona un área</string>
    <string name="no_area">NO FILTRO AREA</string>
    <string name="no_location">NO FILTRO LOCALIDAD</string>
    <string name="no_category">NO FILTRO CATEGORIA</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="register_name">Nombre de usuario</string>
    <string name="compass">compass</string>
    <string name="profile">Tu perfil</string>
    <string name="edit_name">edit</string>
    <string name="save">Guardar</string>
    <string name="changed_name">Nombre de usuario cambiado</string>
    <string name="changed_name_error">Se ha producido un error al intentar cambiar el nombre de usuario</string>
    <string name="same_name">El nombre de usuario es el mismo</string>
    <string name="reject">Rechazar</string>
    <string name="no_post">En este apartado puede modificar su nombre de perfil y verá sus post añadidos \n ¡Añade tu primer post!</string>
    <string name="no_messages">En este apartado aparecerán los mensajes de los usuario que quieran ponerse en contacto por sus post añadidos</string>
    <string name="communication">communication</string>
    <string name="add_message">Añadir mensaje</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="sended_message">Mensaje enviado</string>
    <string name="user_message">Mensaje enviador por: </string>
    <string name="delete_message_success">El mensaje ha sido eliminado</string>
    <string name="delete_message_error">El mensaje no ha podido eliminarse intentelo de nuevo</string>
    <string name="delete_message">Eliminar mensaje</string>
    <string name="delete_message_alert">¿Estas seguro que quieres eliminar este mensaje?</string>
    <string name="your_post">Tu post</string>
    <string name="check_message">Quiero mandar mi correo en el mensaje</string>
    <string name="nav_info">Info</string>
    <string name="attention">¡Atención!</string>
    <string name="data1">Tasa incidencia acumulada últimos 14 días:</string>
    <string name="data2">Tasa incidencia acumulada total:</string>
    <string name="data3">Casos confirmados totales:</string>
    <string name="data4">Casos confirmados últimos 14 días:</string>
    <string name="more_info">Más información sobre estos datos\nhttps://cnecovid.isciii.es/covid19/#documentaci%C3%B3n-y-datos</string>
</resources>