<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_background">

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tool:visibility="visible">

            <ImageButton
                android:id="@+id/close_filter"
                android:layout_width="@dimen/icons_dimens_home"
                android:layout_height="@dimen/icons_dimens_home"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_close_24"
                android:contentDescription="@string/close"
                app:tint="@color/text_color" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/search_location_filter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_8" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/search_area_filter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_8" />

            <Spinner
                android:id="@+id/search_category_filter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_8"
                android:spinnerMode="dialog"
                android:prompt="@string/categories" />

            <EditText
                android:id="@+id/search_user_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:hint="@string/register_name"
                android:textColor="@color/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/apply_filters_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/apply_filters"
                    android:layout_marginEnd="@dimen/margin_4"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/delete_filters_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/delete_filters"
                    android:layout_marginStart="@dimen/margin_4"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_posts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_layout"
            android:layout_marginTop="@dimen/margin_30" />

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="@dimen/icons_dimens_home"
            android:layout_height="@dimen/icons_dimens_home"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_filter_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/filter"
            app:tint="@color/text_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
