<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_background">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message_input_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_8"
            android:clipToPadding="true"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintTop_toBottomOf="@id/message_close"
            android:padding="@dimen/card_padding">

            <EditText
                android:id="@+id/message_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/message_height"
                android:autofillHints=" "
                android:gravity="top|start"
                android:hint="@string/add_message"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/message_input_layout"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/check_message"
            android:checked="true" />

        <Button
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@id/check_user_email"
            android:text="@string/send_message" />

        <ImageButton
            android:id="@+id/message_close"
            android:layout_width="@dimen/close_dimens"
            android:layout_height="@dimen/close_dimens"
            android:layout_margin="@dimen/margin_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/text_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>