<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        app:cardCornerRadius="@dimen/card_dimen"
        app:cardElevation="@dimen/card_dimen"
        app:cardMaxElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_padding"
            android:background="@color/white">

            <TextView
                android:id="@+id/info_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ubication"
                android:textStyle="bold"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/title_data1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/info_location"
                android:layout_marginTop="@dimen/margin_6"
                android:text="@string/data1"
                android:textStyle="italic"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/data1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_data1"
                android:layout_marginTop="@dimen/margin_6"
                tools:text="data1"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/title_data2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/data1"
                android:layout_marginTop="@dimen/margin_6"
                android:text="@string/data2"
                android:textStyle="italic"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/data2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_data2"
                android:layout_marginTop="@dimen/margin_6"
                tools:text="data1"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/title_data3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/data2"
                android:layout_marginTop="@dimen/margin_6"
                android:text="@string/data3"
                android:textStyle="italic"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/data3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_data3"
                android:layout_marginTop="@dimen/margin_6"
                tools:text="data1"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/title_data4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/data3"
                android:layout_marginTop="@dimen/margin_6"
                android:text="@string/data4"
                android:textStyle="italic"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/data4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_data4"
                android:layout_marginTop="@dimen/margin_6"
                tools:text="data1"
                android:textSize="@dimen/data_size" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
